# turtlebot_autonav

./: .gitignore  CMakeLists.txt  README.md  package.xml
extras/: eye.py  imgtest.py  test2.py  viewVideo.py  yolo.py
launch/: gazebo.launch  turtle.launch
models/StraightCorridor/: model.config  model.sdf
msg/: Pulse.msg
src/: circadian.py  colorPicker.py  helm.py  lineFollow.py  listener.py  motorcortex.py  multi_point_blob.py  multi_point_blob_edge.py  multi_point_blob_lineDiscovery.py  navigator.py  navigator_gazebo.py  obstacle_avoidance.py  parrot2.py  parrot2_gazebo.py  prefrontalcortex.py  pure_pursuit.py  tfdrop.py  viewVideo.py  visualcortex.py  visualcortex_gazebo.py
worlds/: straightCorridor.world
