<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_autonav</name>
  <version>0.0.0</version>
  <description>Aue 8230 Autonomy: Science and Systems Final Project. Turtlebot navigation with camera and lidar</description>
  <maintainer email="root@todo.todo">Team B</maintainer>
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <author email="jane.doe@example.com">Brandon Kelly</author>
  <author email="jane.doe@example.com">Dev Gupta</author>
  <author email="jane.doe@example.com">Pranav Korrapati2</author>
  <author email="jane.doe@example.com">Ullashvaran Sureshvaran</author>

  <buildtool_depend>catkin</buildtool_depend>
    
  <build_depend>rospy</build_depend>  
  <build_depend>std_msgs</build_depend> 
  <build_depend>sensor_msgs</build_depend> 
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>message_generation</build_depend>    
  
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>  
  <exec_depend>geometry_msgs</exec_depend>  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
 

  <export>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
